--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,5 +1,6 @@
 \section{Experimental Methodology}
 
+\hl{Add this somewhere, it comes from old 2.2: Our harness takes as input the kernel code and runs it using both a single thread and 2048 threads.}
 \subsection{Experimental Setup}
 
 \begin{table*}[t!]
