Update on Overleaf.

--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -22,6 +22,7 @@ Generating test cases for compilers is hard because their inputs are highly stru
 
 An \emph{oracle compiler} (LLVM 3.9) is used to statically check the source files, discarding files that are not well-formed. The main purpose of this step is to remove the need to manually check that each source file is indeed in OpenCL. A downside is that any training candidate which triggers a bug in the LLVM 3.9's front end will not be included. However, this did not prevent our system from uncovering errors in that compiler.}
 
+\hl{Possibly remove much of this if don't need filler.}
 The source code is then rewritten to remove trivial syntactic differences between training programs. First, each source file is pre-processed to inline macros and remove conditional compilation and comments. Then, all user-declared identifiers are renamed using an arbitrary, but consistent pattern based on their order of declaration: $\{a,\allowbreak b,\allowbreak c,\allowbreak \ldots,\allowbreak aa,\allowbreak ab,\allowbreak ac,\allowbreak \ldots\}$ for variables and $\{A,\allowbreak B,\allowbreak C,\allowbreak \ldots,\allowbreak AA,\allowbreak AB,\allowbreak AC,\allowbreak \ldots\}$ for functions. This ensures a consistent naming convention, without modifying program behavior. Finally, a uniform code style is enforced to ensure consistent use of braces, parentheses, and white space. \hl{These rewritting simplifications give more opportunities for the model to learn the structure and deeper aspects of the language and speed up the learning. On the other hand, some bugs in the preprocessor or frontend might no longer be discoverable. We reason that this is an acceptable tradeoff. For languages where the corpus can be many orders of magnitude larger, for example, C or Java, models can be generated without these modifications.}
 
 \paragraph{Encoder} The textual representation of program codes must be encoded as numeric sequences for feeding as input to the machine learning model. Prior works in have used character-level encodings, token-level encodings, or fixed length feature vectors. We extend the hybrid character/token-level encoding of~\cite{Cummins2017b}, in which language keywords and common names are treated as individual tokens while the rest of the text is encoded on a character basis. This approach hits a balance between compressing the input text and keeping the token number low. 
@@ -74,14 +75,14 @@ Our harness first determines the expected arguments from the function prototype 
   \centering %
   \includegraphics[width=.8\columnwidth]{img/test_process}%
   \caption{%
- 	  Test case execution, and possible results. For each testbed, test case execution produces one of seven possible outcomes: \{bf--build failure, bc--build crash, bto--build timeout,c--runtime crash, to--runtime timeout, w--wrong code,\cmark--pass\}.%
+ 	  Test case execution, and possible results. For each testbed, test case execution produces one of seven possible outcomes: \{bf--build failure, bc--build crash, bto--build timeout,c--runtime crash, to--runtime timeout, w--wrong output,\cmark--pass\}.%
   }%
   \label{fig:test-process} %
 \end{figure}
 
 As in prior work, voting on the output of programs across compilers has been used to circumvent the \emph{oracle problem} and detect miscompilations~\cite{McKeeman1998}. We extend this approach to describe not only miscompilations, but also anomalous build failures and crashes.
 
-Executing a test case on a testbed leads to one of six possible outcomes: \textbf{\{bf,bc,bto,c,to,\cmark\}}, illustrated in Figure~\ref{fig:test-process}. A \emph{build failure} (\textbf{bf}) occurs when online compilation of the OpenCL kernel fails, usually accompanied by an error diagnostic. A \emph{build crash} (\textbf{bc}) or \emph{build timeout} (\textbf{bto}) outcome occurs if the compiler crashes or fails to produce a binary within 60 seconds, respectively. For compile-only test cases, a \emph{pass} (\textbf{\cmark}) is achieved if the compiler produces a binary. For test cases in which the kernel is executed, kernel execution leads to one of three potential outcomes: \emph{runtime crash} (\textbf{c}) if the program crashes, \emph{timeout} (\textbf{to}) if the kernel fails to terminate within 60 seconds, or \emph{pass} (\textbf{\cmark}) if the kernel terminates gracefully and computes an output.
+Executing a test case on a testbed leads to one of seven possible outcomes: \textbf{\{bf,bc,bto,c,to,w,\cmark\}}, illustrated in Figure~\ref{fig:test-process}. A \emph{build failure} (\textbf{bf}) occurs when online compilation of the OpenCL kernel fails, usually accompanied by an error diagnostic. A \emph{build crash} (\textbf{bc}) or \emph{build timeout} (\textbf{bto}) outcome occurs if the compiler crashes or fails to produce a binary within 60 seconds, respectively. For compile-only test cases, a \emph{pass} (\textbf{\cmark}) is achieved if the compiler produces a binary. For test cases in which the kernel is executed, kernel execution leads to one of three potential outcomes: \emph{runtime crash} (\textbf{c}) if the program crashes, \emph{timeout} (\textbf{to}) if the kernel fails to terminate within 60 seconds, or \emph{pass} (\textbf{\cmark}) if the kernel terminates gracefully and computes an output.
 %
 %\begin{enumerate}
 %	\item \emph{Build failure} (\textbf{bf}) Online compilation of the OpenCL kernel fails, usually accompanied by an error diagnostic.
@@ -122,8 +123,8 @@ Our sequence-to-sequence approach to program generation greatly simplifies the i
 Many of the false positives are caused by undefined behavior. Some of them, such as data races and out-of-bounds accesses, can be caught with GPUverify~\cite{Betts2012} and Oclgrind, while some compiler warnings provide strong indication of such behavior (e.g. comparison between pointer and integer). For the rest, our approach does not rule out manual inspection. DeepSmith programs are short and easily interpretable, so manual inspection is feasible.
 
 % Vendor support for OpenCL standard versions is inconsistent, as is the support for optional language extensions. Since we do not version the GitHub corpus on which we built the DeepSmith models, we might generate code which uses features not supported by a testbed. Such cases were trivially detectable through compiler error messages which we used to prevent false-positives for anomalous build failures.
-
-Floating point operations in OpenCL can be imprecise, so the same correct code can produce significantly different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. This restriction is artificially limiting, since floating point computations are very common in OpenCL. DeepSmith allows floating point operations but since it cannot apply differential testing on the outputs, it can detect all results except for the \textbf{w} result.
+  
+Floating point operations in OpenCL can be imprecise, so the same correct code can produce significantly different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. This restriction is artificially limiting, since floating point computations are very common in OpenCL. \am{State what percentage of training corpus uses floats?  It must be high.}  DeepSmith allows floating point operations but since it cannot apply differential testing on the outputs, it can detect all results except for the \textbf{w} result.
 
 The hardest false-positive to prevent was division by zero and related mathematical functions which require non-zero values. In all cases we discovered these can be detected by simply changing the input values and checking to see if the output remains anomalous.
 
@@ -141,7 +142,7 @@ The hardest false-positive to prevent was division by zero and related mathemati
 % \paragraph{Divide-by zero} \cc{TODO} The hardest false-positive to prevent was division by zero and related mathematical functions which require non-zero values. In all cases we discovered these can be detected by simply changing the input values and checking to see if the output remains anomalous.
 
 % Section 7.4 of OpenCL 1.2 spec.
+% HJL- IMO just bin this
+%\cc{Find a home:} Random token / grammar enumeration has previously been used to target parsers and lexers. CSmith creates huge, ``ugly'' programs with the intention of deliberately targeting bugs in IR transformations --- the middle-end.
 
-\cc{Find a home:} Random token / grammar enumeration has previously been used to target parsers and lexers. CSmith creates huge, ``ugly'' programs with the intention of deliberately targeting bugs in IR transformations --- the middle-end.
-
-One might expect our approach --- generating small test cases in the style of handwritten programs --- is perhaps less likely to find bugs than CSmith, which generates huge, ``ugly'' programs pairing infrequently used language features. DeepSmith rarely generates large OpenCL kernels because humans rarely write them. A code which is more likely to be written by a human is also more likely to be included in the compiler test suites, \cc{hmm what do we do about this}
+%One might expect our approach --- generating small test cases in the style of handwritten programs --- is perhaps less likely to find bugs than CSmith, which generates huge, ``ugly'' programs pairing infrequently used language features. DeepSmith rarely generates large OpenCL kernels because humans rarely write them. A code which is more likely to be written by a human is also more likely to be included in the compiler test suites, \cc{hmm what do we do about this}
